--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,13 @@ input[type="number"]::-webkit-outer-spin-button {
   appearance: none;
   margin: 0;
 }
+
+input,
+textarea,
+button {
+  outline: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
